Add yet one more "--add-opens" to `starctl`, needed for classloader fix